bin/tests/snapshots/array_spacing__7e622bd8656599dcf084f8873de720a9_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];

  foo = 1;
}
---
