bin/tests/snapshots/array_spacing__7e622bd8656599dcf084f8873de720a9_lint_errfmt.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];

  foo = 1;
}
---
<temp_file_path>>7:3:W:31:[attribute_ordering] `foo` is out of alphabetical order
