bin/tests/snapshots/array_spacing__7e622bd8656599dcf084f8873de720a9_lint_json.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];

  foo = 1;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 7,
              "column": 3
            },
            "to": {
              "line": 7,
              "column": 11
            }
          },
          "message": "`foo` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 8,
                "column": 2
              }
            },
            "fix": "{\n  foo = 1;\n\n  kernelModules = [\n    \"a\"\n    \"b\"\n  ];\n}"
          }
        }
      ]
    }
  ]
}
