bin/tests/snapshots/array_spacing__7e622bd8656599dcf084f8873de720a9_lint_stderr.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  kernelModules = [
    "a"
    "b"
  ];

  foo = 1;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:7:3 ]
   │
 7 │   foo = 1;
   │   ────┬───  
   │       ╰───── foo is out of alphabetical order
───╯
