bin/tests/snapshots/array_spacing__81db2f1e452608682113781fddaff6f0_lint_json.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];

  bar = 2;
}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "attribute_ordering",
      "note": "Attributes are not in alphabetical order",
      "code": 31,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 9,
              "column": 3
            },
            "to": {
              "line": 9,
              "column": 11
            }
          },
          "message": "`bar` is out of alphabetical order",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 10,
                "column": 2
              }
            },
            "fix": "{\n  bar = 2;\n\n  foo = 1;\n\n  kernelModules = [\n    \"a\"\n    \"b\"\n  ];\n}"
          }
        }
      ]
    }
  ]
}
