bin/tests/snapshots/array_spacing__81db2f1e452608682113781fddaff6f0_lint_stderr.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];

  bar = 2;
}
---
[attribute_ordering] Warning: Attributes are not in alphabetical order
   ╭─[ <temp_file_path>:9:3 ]
   │
 9 │   bar = 2;
   │   ────┬───  
   │       ╰───── bar is out of alphabetical order
───╯
