bin/tests/snapshots/array_spacing__91e39bbbeaeca3a0754c8ea05e876b14_fix.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];

  bar = 2;
}
---
