bin/tests/snapshots/array_spacing__91e39bbbeaeca3a0754c8ea05e876b14_lint_errfmt.snap
---
source: bin/tests/array_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];

  bar = 2;
}
---
<temp_file_path>>8:3:W:31:[attribute_ordering] `bar` is out of alphabetical order
<temp_file_path>>3:3:W:33:[array_spacing] a blank line should come before this multiline array
